--- a/Node.js/3. Crud App/package.json
+++ b/Node.js/3. Crud App/package.json
@@ -2,9 +2,11 @@
   "name": "crud_app",
   "version": "1.0.0",
   "description": "Simple web backend for creating, reading, updating and deleting data using node.js, express and mongodb",
-  "main": "src/app.js",
+  "main": "src/server.js",
   "scripts": {
-    "script": "nodemon src/app.js"
+    "script": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vishnu Pratap Singh",
   "license": "ISC",
@@ -16,5 +18,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "12.18.3"
   }
 }
